--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "release-build": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/build/intermediates/res/merged/release/ && rm -rf android/app/src/main/res/drawable-* && rm -rf android/app/src/main/res/raw/* && cd android && ./gradlew assembleRelease && cd ..",
     "clean-gradle": "cd android && ./gradlew clean && cd ..",
     "android-release": "react-native run-android --variant=release",
+    "clean": "react-native-clean-project",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -15,6 +16,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.0",
+    "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "install": "^0.13.0",
@@ -24,6 +26,7 @@
     "react-native-drop-shadow": "^0.0.4",
     "react-native-floating-action": "^1.22.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
@@ -39,6 +42,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-clean-project": "^4.0.1",
     "react-test-renderer": "17.0.2"
   },
   "jest": {
