--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "react-native-animated-splash-screen": "^2.0.5",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-floating-action": "^1.22.0",
-    "react-native-linear-gradient": "^2.5.6",
+    "react-native-gifted-charts": "^1.2.41",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.2.2",
     "react-native-screens": "^3.13.1",
+    "react-native-svg": "^12.4.4",
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.1.0",
     "react-number-format": "^4.9.1"
